--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li class="list-no-point"><a class="nav-link" href="#porfolio-anderson">portfolio</a></li>
             <li class="list"><a class="nav-link" href="#about-anderson">about </a></li>
-            <li class="nav-image"><img src="Logo.png" alt="oh"></li>
+            <li class="nav-image"><img src="images/Logo.png" alt="oh"></li>
             <li class="list-no-point"><a class="nav-link" href="#"> blog</a></li>
             <li class="list"><a class="nav-link" href="#gtch">get in touch</a></li>
         </ul>
@@ -29,24 +29,24 @@
         <label for="slider1_1"></label>
         <div class="trang"></div>
         <div class="hexal-group" id="porfolio-anderson">
-            <img class="anderson" src="first_img.png">
-            <img class="anderson" src="Layer2.png">
-            <img class="anderson" src="Layer3.png">
-            <img class="anderson" src="Layer4.png">
+            <img class="anderson" src="images/first_img.png">
+            <img class="anderson" src="images/Layer2.png">
+            <img class="anderson" src="images/Layer3.png">
+            <img class="anderson" src="images/Layer4.png">
         </div>
 
         <div class="hexal-group-row2">
-            <img class="anderson-row2" src="Layer5.png">
-            <img class="anderson-row2" src="Layer6.png">
-            <img class="anderson-row2" src="Layer7.png">
-            <img class="anderson-row2" src="Layer8.png">
-            <img class="anderson-row2" src="Layer9.png">
+            <img class="anderson-row2" src="images/Layer5.png">
+            <img class="anderson-row2" src="images/Layer6.png">
+            <img class="anderson-row2" src="images/Layer7.png">
+            <img class="anderson-row2" src="images/Layer8.png">
+            <img class="anderson-row2" src="images/Layer9.png">
         </div>
         <div class="hexal-group-row3">
-            <img class="anderson-row3" src="Layer10.png">
-            <img class="anderson-row3" src="Layer11.png">
-            <img class="anderson-row3" src="Layer12.png">
-            <img class="anderson-row3" src="Layer13.png">
+            <img class="anderson-row3" src="images/Layer10.png">
+            <img class="anderson-row3" src="images/Layer11.png">
+            <img class="anderson-row3" src="images/Layer12.png">
+            <img class="anderson-row3" src="images/Layer13.png">
         </div>
 
         <input type="radio" name="slider1" id="slider1_2">
@@ -73,7 +73,7 @@
     </div>
 
     <div class="main">
-        <img id="anderson" src="Anderson.png">
+        <img id="anderson" src="images/Anderson.png">
         <div class="content_main">
             <h1 id="about-anderson" class="Smith_Anderson">Smith Anderson</h1><br>
             <h2 class="Illustrator___Character_Designer"> Illustrator and Charactrer Designer </h2>
@@ -83,12 +83,12 @@
             </div>
         </div>
         <div class="social">
-            <a class="links_index" href="https://www.linkedin.com"> <img src="Linkedin.png"></a>
-            <a class="links_index" href="https://www.facebook.com"> <img src="Facebook.png"> </a>
-            <a class="links_index" href="https://dribbble.com/?/"> <img src="Dribbble.png"> </a>
-            <a class="links_index" href="https://twitter.com"> <img src="Twitter.png"></a>
-            <a href="https://www.google.com"> <img src="Google.png"></a>
-            <a href="https://www.pinterest.ru" class="links_index"> <img src="Pinterest.png"></a>
+            <a class="links_index" href="https://www.linkedin.com"> <img src="images/Linkedin.png"></a>
+            <a class="links_index" href="https://www.facebook.com"> <img src="images/Facebook.png"> </a>
+            <a class="links_index" href="https://dribbble.com/?/"> <img src="images/Dribbble.png"> </a>
+            <a class="links_index" href="https://twitter.com"> <img src="images/Twitter.png"></a>
+            <a href="https://www.google.com"> <img src="images/Google.png"></a>
+            <a href="https://www.pinterest.ru" class="links_index"> <img src="images/Pinterest.png"></a>
         </div>
     </div>
 
@@ -111,10 +111,10 @@
         aucibus morbi vitae.</span>
     </div>
 
-    <span class="smallimg"> <img src="location.png">   Elm St.14/05 LostCity </span><br>
-    <a href="tel:+35283318635"><span class="smallimg"> <img src="mail.png">   +35283318635 </span><br>
+    <span class="smallimg"> <img src="images/location.png">   Elm St.14/05 LostCity </span><br>
+    <a href="tel:+35283318635"><span class="smallimg"> <img src="images/mail.png">   +35283318635 </span><br>
         <a href="mailto:info@hexalcorp.com"><span class="smallimg"> <img
-                src="phone.png">   info@hexalcorp.com </span></a><br>
+                src="images/phone.png">   info@hexalcorp.com </span></a><br>
 </main>
 
 
