solved problems with form

--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
 
         <input type="radio" name="slider1" id="slider1_4">
         <label for="slider1_4"></label>
-        <!--<div class="hexal-group-row3">-->
-        <!--<img class="anderson" id="anderson1" src="Anderson.png">-->
-        <!--<img class="anderson" id="anderson2" src="Anderson.png" >-->
-        <!--<img  class="anderson" id="anderson3" src="Anderson.png">-->
-        <!--<img class="anderson" id="anderson4" src="Anderson.png">-->
-        <!--</div>-->
         <div></div>
     </div>
 
@@ -93,7 +87,7 @@
     </div>
 
     <div id="line1"></div>
-    <p>
+    <form>
     <h2 id="gtch" class="Get_In_Touch ">Get in Touch</h2></p>
     <p id="p" class="In_order_to_get_in_touch_use_the_contact_form_b">In order to get touch the contact form below:</p>
     <br>
